<resources>
    <string name="loading">加载</string>
        <string name="app_name">POS收单测试</string>
        <string name="scan_text">将二维码置于框内扫描</string>
        <string name="downloading">正在下载...</string>
        <string name="success">成功</string>
        <string name="fail">失败</string>
        <string name="yes">是</string>
        <string name="no">否</string>
        <string name="login">操作员登陆</string>
        <string name="login_user_no">操作员号</string>
        <string name="login_user_pwd"> 密码</string>
        <string name="login_user_OK"> 登陆</string>
        <string name="login_user_Cancel"> 退出</string>
        <string name="menu_sale"> 消费</string>
        <string name="menu_void"> 撤销</string>
        <string name="menu_refund"> 退货</string>
        <string name="menu_preauth"> 预授权</string>
        <string name="menu_balance"> 余额查询</string>
        <string name="menu_manage"> 管理</string>
        <string name="menu_manage_signin"> 签到</string>
        <string name="menu_manage_signout"> 签退</string>
        <string name="menu_manage_settlement"> 结算</string>
        <string name="menu_manage_operator"> 柜员</string>
        <string name="menu_manage_parameter"> 参数</string>
        <string name="menu_manage_query"> 查询</string>
        <string name="menu_manage_print"> 打印</string>
        <string name="menu_manage_version"> 版本</string>
        <string name="menu_setting_operator"> 柜员管理</string>
        <string name="setting_oper_manager_change_pwd"> 主管改密</string>
        <string name="setting_oper_add"> 添加操作员</string>
        <string name="setting_oper_delete"> 删除操作员</string>
        <string name="setting_oper_query"> 查询操作员</string>
        <string name="setting_oper_cjange_pwd"> 柜员改密</string>
        <string name="key_modify_operator">key_modify_operator</string>
        <string name="modify_operator">修改操作员密码</string>
        <string name="key_add_operator">key_add_operator</string>
        <string name="add_operator">新增操作员</string>
        <string name="key_delete_operator">key_delete_operator</string>
        <string name="delete_operator">删除操作员</string>
        <string name="key_modify_system_manager">key_modify_system_manager</string>
        <string name="modify_system_manager">修改系统管理员密码</string>
        <string name="key_modify_manager">key_modify__manager</string>
        <string name="modify_manager">修改主管密码</string>
        <string name="need_input_manager_pwd"> 需要输入主管密码</string>
        <string name="ChinaUnion"> 中国银联</string>
        <string name="time"> 时间</string>
        <string name="title_parameter_setting">参数设置</string>
        <string name="title_setting_terminal">终端参数设置</string>
        <string name="title_setting_communication">通讯参数设置</string>
        <string name="title_setting_transaction">交易功能设置</string>
        <string name="title_setting_key">终端密钥管理</string>
        <string name="title_setting_password">修改管理员密码</string>
        <string name="title_setting_clear">清除功能</string>
        <string name="title_setting_IC">IC卡参数管理</string>
        <string name="title_setting_external">外接设备管理</string>
        <string name="setting_downParameterTERMINAL">下载终端参数</string>
        <string name="key_downParameterTERMINAL">downParameterTERMINAL</string>
        <string name="setting_downParameterAID">下载IC卡参数</string>
        <string name="key_downParameterAID">downParameterAID</string>
        <string name="setting_downParameterCAPK">下载IC卡公钥</string>
        <string name="key_downParameterCAPK">downParameterCAPK</string>
        <string name="setting_downParameterAIDFinish">下载IC卡参数结束</string>
        <string name="key_downParameterAIDFinish">downParameterAIDFinish</string>
        <string name="setting_downParameterCAPKFinish">下载IC卡公钥结束</string>
        <string name="key_downParameterCAPKFinish">downParameterCAPKFinish</string>
        <string name="settingMasterKey">设置终端主密钥</string>
        <string name="key_setting_MasterKey">settingMasterKey</string>
        <string name="setting_downParameter01">下载参数块01</string>
        <string name="key_downParameter01">downParameter01</string>
        <string name="setting_downParameter02">下载参数块02</string>
        <string name="key_downParameter02">downParameter02</string>
        <string name="setting_downParameter03">下载参数块03(AID)</string>
        <string name="key_downParameter03">downParameter03</string>
        <string name="setting_downParameter04">下载参数块04(CAPK)</string>
        <string name="key_downParameter04">downParameter04</string>
        <string name="setting_queryAIDVersion">查询IC卡参数信息</string>
        <string name="key_queryAIDVersion">queryAIDVersion</string>
        <string name="setting_downloadNFCPara">非接参数下载</string>
        <string name="key_downloadNFCPara">downloadNFCPara</string>
        <string name="setting_doanloadNFCWhiteNameList">非接白名单下载</string>
        <string name="key_doanloadWhiteNameList">doanloadWhiteNameList</string>
        <string name="setting_doanloadNFCBlackNameList">非接黑名单下载</string>
        <string name="key_doanloadNFCBlackNameList">doanloadNFCBlackNameList</string>
        <string name="setting_doanloadBlackNameList">黑名单下载</string>
        <string name="key_doanloadBlackNameList">doanloadBlackNameList</string>
        <string name="setting_autoDownloadAID">IC卡参数下载</string>
        <string name="key_autoDownloadAID">autoDownloadAID</string>
        <string name="setting_autoDownloadCAPK">IC卡公钥下载</string>
        <string name="key_autoDownloadCAPK">autoDownloadCAPK</string>
        <string name="setting_queryCAPKVersion">查询IC卡公钥信息</string>
        <string name="key_queryCAPKVersion">queryCAPKVersion</string>
        <string name="setting_PosStateUpload">POS状态上送</string>
        <string name="key_PosStateUpload">PosStateUpload</string>
        <string name="setting_terminalID">终端号</string>
        <string name="key_TerminalID">TerminalID</string>
        <string name="setting_merchantID">商户号</string>
        <string name="key_MerchantID">MerchantID</string>
        <string name="setting_merchantName">商户名称</string>
        <string name="key_MerchantName">MerchantName</string>
        <string name="setting_SN">终端序列号</string>
        <string name="TerminalSN">TerminalSN</string>
        <string name="setting_current_SysTraceNo">当前流水号</string>
        <string name="key_Currnet_SysTranceNo">Currnet_SysTranceNo</string>
        <string name="setting_current_BatchNo">当前批次号</string>
        <string name="key_Currnet_BatchNo">Currnet_BatchNo</string>
        <string name="setting_RefundMaxAmt">退货最大金额(分)</string>
        <string name="key_RefundMaxAmt">RefundMaxAmt</string>
        <string name="setting_PrintGrey">打印灰度(1-?)</string>
        <string name="key_PrintGrey">PrintGrey</string>
        <string name="setting_PrintBaseParameter">打印参数</string>
        <string name="key_PrintBaseParameter">PrintBaseParameter</string>
        <string name="database_test">数据库测试</string>
        <string name="key_database_test">DBTest</string>
        <string name="setting_MainServerIP">主服务器IP</string>
        <string name="key_MainServerIP">MainServerIP</string>
        <string name="setting_MainServerPort">主服务器端口</string>
        <string name="key_MainServerPort">MainServerPort</string>
        <string name="setting_BackupServerIP">备用服务器机IP</string>
        <string name="key_BackupServerIP">BackupServerIP</string>
        <string name="setting_BackupServerPort">备用服务器端口</string>
        <string name="key_BackupServerPort">BackupServerPort</string>
        <string name="setting_Timeout">超时时间(秒)</string>
        <string name="key_Timeout">Timeout</string>
        <string name="setting_TPDU">TPDU</string>
        <string name="key_TPDU">TPDU</string>
        <string name="setting_NFCParSwitch">NFC参数</string>
        <string name="setting_ElectSign">POS凭条电子化参数</string>
        <string name="setting_QPSIdentify">非接快速业务标识</string>
        <string name="key_QPSIdentify">QPSIdentify</string>
        <string name="setting_BinListAIdentify">BIN表A标识</string>
        <string name="key_BinListAIdentify">BinListAIdentify</string>
        <string name="setting_BinListBIdentify">BIN表B标识</string>
        <string name="key_BinListBIdentify">BinListBIdentify</string>
        <string name="setting_CDCVMIdentify">CDCVM标识</string>
        <string name="key_CDCVMIdentify">CDCVMIdentify</string>
        <string name="setting_NoSignIdentify">免签标识</string>
        <string name="key_NoSignIdentify">NoSignIdentify</string>
        <string name="setting_QPSNoPWDLimitAmount">免密限额(分)</string>
        <string name="key_QPSNoPWDLimitAmount">QPSNoPWDLimitAmount</string>
        <string name="setting_ElectSign_InputTimeout">等待签字输入超时时间(秒)</string>
        <string name="key_ElectSign_InputTimeout">ElectSign_InputTimeout</string>
        <string name="setting_ElectSign_MaxByte">电子签字分包传输的单位字节数</string>
        <string name="key_ElectSign_MaxByte">ElectSign_MaxByte</string>
        <string name="setting_NfcPrioritySwitch">非接优先开关</string>
        <string name="key_NfcPrioritySwitch">NfcPrioritySwitch</string>
        <string name="setting_ElectSign_Switch">电子签名开关</string>
        <string name="key_ElectSign_Switch">ElectSign_Switch</string>
        <string name="setting_ElectSign_Separate_Switch">支持分包上送的标志</string>
        <string name="key_ElectSign_Separate_Switch">ElectSign_Separate_Switch</string>
        <string name="setting_QPSNoSignLimitAmount">免签限额(分)</string>
        <string name="key_QPSNoSignLimitAmount">QPSNoSignLimitAmount</string>
        <string name="setting_TranSwitch">交易功能开关</string>
        <string name="setting_TranSwitchSummary">点击进入设置</string>
        <string name="setting_SettlePrintDetail">结算提示打印明细</string>
        <string name="key_SettlePrintDetail">SettlePrintDetail</string>
        <string name="setting_IsSupportIC">支持IC卡交易</string>
        <string name="key_IsSupportIC">IsSupportIC</string>
        <string name="setting_IsSupporFallback">支持降级交易</string>
        <string name="key_IsSupporFallback">IsSupporFallback</string>
        <string name="setting_IsSupporMaskPan">支持屏蔽卡号</string>
        <string name="key_IsSupporMaskPan">IsSupporMaskPan</string>
        <string name="setting_IsVoidNeedPwd">撤销需要输密</string>
        <string name="key_IsVoidNeedPwd">IsVoidNeedPwd</string>
        <string name="setting_IsSupporPreauth">支持预授权</string>
        <string name="key_IsSupporPreauth">IsSupporPreauth</string>
        <string name="setting_IsSupporRefund">支持退货</string>
        <string name="key_IsSupporRefund">IsSupporRefund</string>
        <string name="setting_MaxReversalTime">冲正重发次数</string>
        <string name="key_MaxReversalTime">MaxReversalTime</string>
        <string name="setting_DefaultTran">设置默认交易</string>
        <string name="key_DefaultTran">DefaultTran</string>
        <string name="item_sale">消费</string>
        <string name="item_preauth">预授权</string>
        <string name="setting_ReceiptNo">银行卡交易打印联数(0~2)</string>
        <string name="key_ReceiptNo">ReceiptNo</string>
        <string name="setting_ScanReceiptNo">扫码打印联数(0~2)</string>
        <string name="key_ScanReceiptNo">ScanReceiptNo</string>
        <string name="setting_MaxTranNumber">最大交易笔数</string>
        <string name="key_MaxTranNumber">MaxTranNumber</string>
        <string name="setting_IsPrintTroubleTicket">是否打印故障单</string>
        <string name="key_IsPrintTroubleTicket">IsPrintTroubleTicket</string>
        <string name="setting_KeyEncryptAlgorithm">加密算法</string>
        <string name="key_KeyEncryptAlgorithm">KeyEncryptAlgorithm</string>
        <string name="item_des">DES</string>
        <string name="item_3des">TDES</string>
        <string name="setting_KeyHandInput">手工输入密钥</string>
        <string name="setting_MasterKeyIndex">主密钥索引</string>
        <string name="key_MasterKeyIndex">MasterKeyIndex</string>
        <string name="ConfirmCardNo">请确认银行卡号</string>
        <string name="bn_confirm">确认</string>
        <string name="bn_cancel">取消</string>
        <string name="balance_success">"查询成功"</string>
</resources>