<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login_bg1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@mipmap/telpo_logo"
        android:visibility="invisible" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_height="40dp"
            android:layout_marginTop="30dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/login_user_no"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_user_no"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/write"
                android:clickable="false"
                android:gravity="center_vertical"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textColor="@color/Black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="8dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/login_user_pwd"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_user_pwd"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/write"
                android:clickable="false"
                android:gravity="center_vertical"
                android:inputType="numberPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textColor="@color/Black"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_button_selector"
        android:onClick="operator_login"
        android:text="@string/login_user_OK"
        android:textSize="20sp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"

        android:layout_marginTop="110dp"
        android:layout_marginRight="30dp"


        android:background="@drawable/exit_button_selector"
        android:onClick="app_finish"
        android:text="@string/login_user_Cancel"

        android:textSize="20sp" />
</LinearLayout>